--- a/style.css
+++ b/style.css
@@ -3,3 +3,11 @@
     height: auto;
     background-color: #cecece;
 }
+.headerTable
+{
+    width:100%;
+    font-colour:#e09738;
+    font: arial;
+    font-size:12px;
+    
+}
